kubernetes/platform/idc/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brownrook-idc
  namespace: brownrook-idc
  labels:
    app: brownrook-idc
  annotations:
    brownrook.com/app-version: "0.1.18"
    brownrook.com/git-commit: "62b93b329a89227094548548aa9f51fbd3e59bb2"
    brownrook.com/build-number: "54"
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: brownrook-idc
  template:
    metadata:
      labels:
        app: brownrook-idc
      annotations:
        brownrook.com/app-version: "0.1.18"
        brownrook.com/git-commit: "62b93b329a89227094548548aa9f51fbd3e59bb2"
        brownrook.com/build-number: "54"
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          minDomains: 2
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          matchLabelKeys:
            - pod-template-hash
          labelSelector:
            matchLabels:
              app: brownrook-idc
      terminationGracePeriodSeconds: 45    
      imagePullSecrets:
        - name: ghcr-secret
      securityContext:
        runAsNonRoot: true
      containers:
        - name: brownrook-idc
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 15"]
          image: ghcr.io/larocquemb/brownrook-idc:62b93b329a89227094548548aa9f51fbd3e59bb2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
