kubernetes/platform/idc/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brownrook-idc
  namespace: brownrook-idc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - idc.brownrook.com
      secretName: idc-brownrook-com-tls
  rules:
    - host: idc.brownrook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brownrook-idc
                port:
                  number: 80
