kubernetes/platform/idc/50-ledger-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-dev
  namespace: brownrook-idc
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ledger-dev
  namespace: brownrook-idc
  labels:
    kubernetes.io/service-name: ledger-dev
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8080
endpoints:
  - addresses:
      - 192.168.2.10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-dev
  namespace: brownrook-idc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ledger-dev.brownrook.net
      secretName: ledger-dev-brownrook-net-tls
  rules:
    - host: ledger-dev.brownrook.net
      http:
        paths:
          - path: /ledger
            pathType: Prefix
            backend:
              service:
                name: ledger-dev
                port:
                  number: 8080
